# carlos_motion

./: .project  README.md
carlos_motion_action_server/: CMakeLists.txt  package.xml
carlos_motion_action_server/src/: move_platform_client.cpp  move_platform_server.cpp
oea_controller/: CMakeLists.txt  ToDo.txt  package.xml
oea_controller/action/: controlPlatform.action
oea_controller/cfg/: ctrl_params.cfg
oea_controller/include/oea_controller/: ctrl_action_server.h  oea_controller.h
oea_controller/launch/: control.launch  trajectory.launch
oea_controller/launch/params/: params_sim_tracks.yaml
oea_controller/src/: main.cpp  oea_controller.cpp
oea_msgs/: CMakeLists.txt  package.xml
oea_msgs/msg/: Oea_path.msg
oea_planner/: CMakeLists.txt  package.xml
oea_planner/action/: plan.action
oea_planner/cfg/: planner_params.cfg
oea_planner/include/oea_planner/: astar.h  oea_planner_ros.h  planner_action_server.h  structs.h
oea_planner/launch/: oea_planner.launch
oea_planner/src/: astar.cpp  main.cpp  oea_planner_ros.cpp
oea_planner/srv/: isPoseValid.srv
