<package>
  <name> oea_controller </name>
  <version> 0.0.0 </version>
  <description> TODO </description>

  <maintainer email="esf@inescporto.pt">elisabete </maintainer>
  <license> TODO </license>
  <url type="website">http://TODO </url>
  <author email="esf@inescporto.pt">elisabete </author>

  <buildtool_depend> catkin </buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>qt_ros_interface</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>mission_ctrl_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>oea_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>qt_ros_interface</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>mission_ctrl_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>oea_msgs</run_depend>

</package>
